--- a/src/main/resources/assets/mxtestmod/lang/zh_cn.json
+++ b/src/main/resources/assets/mxtestmod/lang/zh_cn.json
@@ -1,6 +1,10 @@
 {
   "item.mxtestmod.citrine": "黄晶",
   "item.mxtestmod.raw_citrine": "粗黄晶",
+  "item.mxtestmod.citrine_helmet": "黄晶头盔",
+  "item.mxtestmod.citrine_boots": "黄晶鞋子",
+  "item.mxtestmod.citrine_chestplate": "黄晶胸甲",
+  "item.mxtestmod.citrine_leggings": "黄晶裤子",
 
   "block.mxtestmod.citrine_block" : "黄晶块",
   "block.mxtestmod.citrine_ore" : "黄晶矿石",
