--- a/src/main/resources/assets/mxtestmod/lang/en_us.json
+++ b/src/main/resources/assets/mxtestmod/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.mxtestmod.citrine_boots": "Citrine Boots",
   "item.mxtestmod.citrine_chestplate": "Citrine Chestplate",
   "item.mxtestmod.citrine_leggings": "Citrine Leggings",
+  "item.mxtestmod.citrine_sword": "Citrine Sword",
 
   "block.mxtestmod.citrine_block" : "Block of Citrine",
   "block.mxtestmod.citrine_ore" : "Citrine Ore",
