--- a/src/main/resources/assets/mxtestmod/lang/zh_cn.json
+++ b/src/main/resources/assets/mxtestmod/lang/zh_cn.json
@@ -5,6 +5,7 @@
   "item.mxtestmod.citrine_boots": "黄晶鞋子",
   "item.mxtestmod.citrine_chestplate": "黄晶胸甲",
   "item.mxtestmod.citrine_leggings": "黄晶裤子",
+  "item.mxtestmod.citrine_sword": "黄晶剑",
 
   "block.mxtestmod.citrine_block" : "黄晶块",
   "block.mxtestmod.citrine_ore" : "黄晶矿石",
